# uvrules

./: .gitignore  LICENSE  README.md  RULES_tutorial.ipynb  Tutorial.ipynb  antpos_20240529_171300.npy  antpos_20240529_203119.npy  antpos_20240529_204131.npy  antpos_20240529_204152.npy  antpos_20240529_204308.npy  antpos_tutorial.npy  antpos_tutorial1.npy  pyproject.toml  rejected_combinations_20240529_171300.npy  rejected_combinations_20240529_203119.npy  rejected_combinations_20240529_204131.npy  rejected_combinations_20240529_204152.npy  rejected_combinations_20240529_204308.npy  rejected_combinations_tutorial.npy  requirements.txt  setup.py  step_time_array_20240529_171300.npy  step_time_array_20240529_203119.npy  step_time_array_20240529_204131.npy  step_time_array_20240529_204152.npy  step_time_array_20240529_204308.npy  step_time_array_tutorial.npy  step_time_array_tutorial1.npy
.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
examples/: RULES_tutorial.html  RULES_tutorial.ipynb
src/uvrules/: __init__.py  antarray.py  improve.py  old_antarray.py  plotting.py  utils.py
uvComplete/: antarray.py  nonrandom.py  random.py  rules.py  utils.py
uvComplete.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
uv_complete/: antarray.py  geometry.py  improve.py  nonrandom.py  plotting.py  random.py  rules.py  utils.py
uv_complete.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
uv_complete/.ipynb_checkpoints/: antarray-checkpoint.py
uv_complete/algos/: greedy.py
uvrules/: antarray.py  geometry.py  improve.py  plotting.py  utils.py
uvrules/algos/: greedy.py  (+2 more)
(+4 files in other folders)
