[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uv_complete"
version = "0.1"
description = "A package to generate uv-complete radio arrays."
authors = [
    { name="Vincent MacKay", email="vince.mackay@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy"
]

