[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uvrules"
version = "0.1.0"
description = "Generate uv-complete radio telescope arrays with the RULES algorithm"
authors = [
    { name = "Vincent MacKay" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
    "finufft",
    "ipython",
]
